--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
                     <p class="tagline">Researcher & IT Expert</p>
                     <!-- <p style="color: var(--text-secondary); font-size: 0.95rem;">Chongqing, China</p> -->
                     <div class="contact-links">
-                        <a href="mailto:mishaown@outlook.com">✉ Email</a>
-                        <a href="https://github.com/mishaown" target="_blank">⚡ GitHub</a>
-                        <a href="https://linkedin.com/in/md-minhazul-islam" target="_blank">⚡ LinkedIn</a>
-                        <a href="https://scholar.google.com/citations?user=3wjC_6MAAAAJ&hl=en" target="_blank">⚡ Google Scholar</a>
+                        <a href="mailto:mishaown@outlook.com">🕊️ Email</a>
+                        <a href="https://github.com/mishaown" target="_blank"> 🦾 GitHub</a>
+                        <a href="https://www.linkedin.com/in/minhazul-md-islam/" target="_blank">🫂 LinkedIn</a>
+                        <a href="https://scholar.google.com/citations?user=3wjC_6MAAAAJ&hl=en" target="_blank">📜 Google Scholar</a>
                     </div>
                 </div>
             </div>
