Update contact links: new emojis and add Kaggle

--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
                     <div class="contact-links">
                         <a href="mailto:mishaown@outlook.com">✉ Email</a>
                         <a href="https://github.com/mishaown" target="_blank">⚡ GitHub</a>
-                        <a href="https://linkedin.com/in/md-minhazul-islam" target="_blank">⚡ LinkedIn</a>
+                        <a href="https://www.kaggle.com/mohammodminhazul" target="_blank">⚡Kaggle</a> 
+                        <a href="https://www.linkedin.com/in/minhazul-md-islam/" target="_blank">⚡ LinkedIn</a>
                         <a href="https://scholar.google.com/citations?user=3wjC_6MAAAAJ&hl=en" target="_blank">⚡ Google Scholar</a>
                     </div>
                 </div>
